<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.BaseLayout"
    >
    <LinearLayout
        style="@style/Widget.Row"
        >
        <TextView
            android:text="@string/ringer_label"
            style="@style/Widget.Label"
            />
        <ProgressBar
            android:id="@+id/ringer_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="5dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="3dip"
            style="?android:attr/progressBarStyleHorizontal"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Widget.Row"
        >
        <TextView
            android:text="@string/notification_label"
            style="@style/Widget.Label"
            />
        <ProgressBar
            android:id="@+id/notification_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="5dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="3dip"
            style="?android:attr/progressBarStyleHorizontal"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Widget.Row"
        >
        <TextView
            android:text="@string/voice_label"
            style="@style/Widget.Label"
            />
        <ProgressBar
            android:id="@+id/voice_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="5dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="3dip"
            style="?android:attr/progressBarStyleHorizontal"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Widget.Row"
        >
        <TextView
            android:text="@string/music_label"
            style="@style/Widget.Label"
            />
        <ProgressBar
            android:id="@+id/music_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="5dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="3dip"
            style="?android:attr/progressBarStyleHorizontal"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Widget.Row"
        >
        <TextView
            android:text="@string/alarm_label"
            style="@style/Widget.Label"
            />
        <ProgressBar
            android:id="@+id/alarm_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="5dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="3dip"
            style="?android:attr/progressBarStyleHorizontal"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Widget.Row"
        >
        <TextView
            android:text="@string/system_label"
            style="@style/Widget.Label"
            />
        <ProgressBar
            android:id="@+id/system_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="5dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="3dip"
            style="?android:attr/progressBarStyleHorizontal"
            />
    </LinearLayout>
</LinearLayout>
